--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,15 +11,19 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.20.3",
+    "@react-three/drei": "^9.120.4",
+    "@react-three/fiber": "^8.17.10",
     "@tailwindcss/forms": "^0.5.9",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "framer-motion": "^11.14.1",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^10.0.6"
+    "react-toastify": "^10.0.6",
+    "three": "^0.171.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
